CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
SET(CMAKE_BUILD_TYPE DEBUG)
#SET(CMAKE_BUILD_TYPE RELEASE)
PROJECT(gflag_glog_tutorials)


#C++ 14
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


FIND_PACKAGE(gflags REQUIRED)
MESSAGE("GFLAGS_FOUND: " ${GFLAGS_FOUND})
MESSAGE("GFLAGS_INCLUDE_DIR: " ${GFLAGS_INCLUDE_DIR})
MESSAGE("GFLAGS_LIBRARIES: " ${GFLAGS_LIBRARIES})
MESSAGE("GFLAGS_LIBRARYRARY_DIRS: " ${GFLAGS_LIBRARYRARY_DIRS} )
include_directories(${GFLAGS_INCLUDE_DIR})


set(glog_DIR "$ENV{HOME}/usr/lib/cmake/glog/")
FIND_PACKAGE(glog REQUIRED google-glog glog)
MESSAGE("GLOG_FOUND: " ${glog_FOUND})
MESSAGE("GLOG_INCLUDE_DIRS: " ${GLOG_INCLUDE_DIRS})
MESSAGE("GLOG_LIBRARIES: " ${GLOG_LIBRARY})

ADD_EXECUTABLE(gflag_demo  src/gflag_demo.cpp)
TARGET_LINK_LIBRARIES( gflag_demo ${GFLAGS_LIBRARIES})

ADD_EXECUTABLE(glog_demo src/glog_demo.cpp)
TARGET_LINK_LIBRARIES( glog_demo glog::glog)
